--- a/packages/ui/react-ui/styles.css
+++ b/packages/ui/react-ui/styles.css
@@ -13,11 +13,12 @@
     height: 48px;
     line-height: 48px;
     padding: 0 24px;
-    border-radius: 4px;
+    border-radius: 14px;
+    transition: transform 200ms ease;
 }
 
 .wallet-adapter-button-trigger {
-    background-color: #512da8;
+    background-color: #383838;
 }
 
 .wallet-adapter-button:not([disabled]):focus-visible {
@@ -25,11 +26,12 @@
 }
 
 .wallet-adapter-button:not([disabled]):hover {
-    background-color: #1a1f2e;
+    background-color: #484848;
+    transform: scale(0.98);
 }
 
 .wallet-adapter-button[disabled] {
-    background: #404144;
+    background: #686868;
     color: #999;
     cursor: not-allowed;
 }
@@ -75,7 +77,7 @@
     list-style: none;
     background: #2c2d30;
     border-radius: 10px;
-    box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.6);
+    box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.1);
     opacity: 0;
     visibility: hidden;
     transition: opacity 200ms ease, transform 200ms ease, visibility 200ms;
@@ -137,6 +139,28 @@
 .wallet-adapter-modal.wallet-adapter-modal-fade-in {
     opacity: 1;
 }
+.wallet-adapter-modal-button-info {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    top: 18px;
+    left: 18px;
+    cursor: pointer;
+    background: transparent;
+    border: none;
+    border-radius: 50%;
+    transition: background-color 200ms ease;
+}
+
+.wallet-adapter-modal-button-info svg {
+    fill: #777;
+    transition: fill 200ms ease 0s;
+}
+
+.wallet-adapter-modal-button-info:hover svg {
+    fill: #fff;
+}
 
 .wallet-adapter-modal-button-close {
     display: flex;
@@ -147,13 +171,18 @@
     right: 18px;
     padding: 12px;
     cursor: pointer;
-    background: #1a1f2e;
+    background: transparent;
     border: none;
     border-radius: 50%;
+    transition: background-color 200ms ease;
 }
 
 .wallet-adapter-modal-button-close:focus-visible {
     outline-color: white;
+}
+
+.wallet-adapter-modal-button-close:hover {
+    background: #333333;
 }
 
 .wallet-adapter-modal-button-close svg {
@@ -196,10 +225,11 @@
     align-items: center;
     flex-direction: column;
     z-index: 1050;
-    max-width: 400px;
-    border-radius: 10px;
-    background: #10141f;
-    box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.6);
+    max-width: 360px;
+    border-radius: 20px;
+    background: #2B2B2B;
+    padding: 0 1rem;
+    box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.1);
     font-family: 'DM Sans', 'Roboto', 'Helvetica Neue', Helvetica, Arial, sans-serif;
     flex: 1;
 }
@@ -208,12 +238,66 @@
     width: 100%;
 }
 
+/* Styles for the burner wallet in the modal list */
+.wallet-adapter-modal-list .wallet-adapter-modal-burner-wallet {
+    background: #2b2b2b !important;
+    color: #808080;
+    justify-content: center;
+    padding: 15px 0 !important;
+    font-size: 15px;
+    line-height: 18px;
+    font-weight: 500;
+    transition: color 200ms, transform 100ms;
+}
+
+.wallet-adapter-modal-list .wallet-adapter-modal-burner-wallet:hover {
+    background: transparent;
+    color: #f57c00;
+}
+
+.wallet-adapter-modal-list .wallet-adapter-modal-burner-wallet .wallet-adapter-button-start-icon {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 20px;
+    height: 20px;
+    margin-right: 6px;
+}
+
+.wallet-adapter-modal-list .wallet-adapter-modal-burner-wallet .wallet-adapter-button-start-icon img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+
+.wallet-adapter-modal-list .wallet-adapter-modal-burner-wallet:hover .wallet-adapter-button-start-icon {
+    transform: scale(1.1);
+    transition: transform 200ms ease;
+}
+
+.wallet-adapter-modal-list .wallet-adapter-modal-burner-wallet .wallet-adapter-button-start-icon path {
+    fill: #FFAE5A;
+}
+
+.wallet-adapter-modal-list .wallet-adapter-modal-burner-wallet span {
+    opacity: 1;
+    font-weight: bold;
+    margin-left: 0;
+}
+
+
+
+/* .wallet-adapter-modal-list .wallet-adapter-modal-burner-wallet .wallet-adapter-button-start-icon,
+.wallet-adapter-modal-list .wallet-adapter-modal-burner-wallet .wallet-adapter-button-end-icon {
+    display: none;
+} */
+
 .wallet-adapter-modal-title {
     font-weight: 500;
-    font-size: 24px;
+    font-size: 18px;
     line-height: 36px;
     margin: 0;
-    padding: 64px 48px 48px 48px;
+    padding: 20px 48px;
     text-align: center;
     color: #fff;
 }
@@ -233,8 +317,11 @@
 
 .wallet-adapter-modal-list .wallet-adapter-button {
     font-weight: 400;
-    border-radius: 0;
+    border-radius: 15px;
+    padding: 30px 20px;
     font-size: 18px;
+    margin-bottom: 0.5rem;
+    background: #383838;
 }
 
 .wallet-adapter-modal-list .wallet-adapter-button-end-icon,
