--- a/packages/ui/react-ui/styles.css
+++ b/packages/ui/react-ui/styles.css
@@ -213,8 +213,8 @@
 }
 
 .wallet-adapter-modal-button-info svg {
-    width: 22px;
-    height: 22px;
+    width: 16px;
+    height: 16px;
 }
 
 .wallet-adapter-modal-overlay {
@@ -243,6 +243,7 @@
 
 .wallet-adapter-modal-wrapper {
     box-sizing: border-box;
+    overflow: hidden;
     position: relative;
     display: flex;
     align-items: center;
@@ -401,4 +402,217 @@
     border: none;
     border-radius: 8px;
     color: #fff;
+}
+
+/* WalletInfoModal styles */
+
+.wallet-adapter-modal-info-title {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 36px;
+    margin: 0;
+    padding: 20px 48px;
+    text-align: center;
+    color: #fff;
+}
+
+.wallet-adapter-modal-info-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+}
+
+.wallet-info-slider {
+    position: relative;
+    width: 90%;
+    height: 120px;
+}
+
+.wallet-info-step {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    transform: scale(0.8);
+    transition: transform 200ms ease;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+.wallet-info-step.active {
+    opacity: 1;
+    transform: scale(1);
+}
+
+.wallet-info-step-title {
+    font-size: 18px;
+    font-weight: bold;
+    color: #fff;
+}
+
+.wallet-info-step-content {
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 21px;
+    color: #808080;
+}
+
+.wallet-info-navigation {
+    justify-content: center;
+    background: #2b2b2b;
+    align-items: center;
+    height: 10px;
+    display: flex;
+    position: absolute;
+    padding: 10px;
+}
+
+.wallet-info-navigation-container {
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    position: relative;
+    width: 100%;
+    height: 30px;
+    margin-bottom: 10px;
+}
+
+.step-indicator {
+    cursor: pointer;
+    background-color: #444444;
+    border: none;
+    border-radius: 20%;
+    width: 6px;
+    height: 6px;
+    margin: 0 5px;
+    transition: transform 200ms ease;
+}
+
+.step-indicator.active {
+    background-color: #4e44ce;
+    width: 30px;
+}
+
+.step-indicator.active:hover {
+    background-color: #685EEB;
+    width: 30px;
+    height: 10px;
+}
+
+.step-indicator:hover {
+    background-color: #575757;
+    height: 10px;
+}
+
+.wallet-info-separator {
+    width: 100%;
+    height: 1px;
+    position: absolute;
+    background: linear-gradient(to right, rgba(59, 59, 59, 0), rgb(87 87 87) 50%, rgba(59, 59, 59, 0));
+}
+
+.wallet-info-learn-more {
+    color: #fff;
+    cursor: pointer;
+    background-color: #444444;
+    border: none;
+    border-radius: 15px;
+    padding: 15px 20px;
+    margin-bottom: 17px;
+    font-size: 16px;
+    width: 100%;
+    transition: transform 200ms ease;
+}
+
+.wallet-info-learn-more:hover {
+    background-color: #3d35a5;
+    transform: scale(0.98);
+}
+
+.wallet-illustration-container {
+    display: flex;
+    justify-content: center;
+    position: relative;
+    width: 100%;
+    height: 200px;
+    max-width: 364px;
+    margin: 0 auto;
+}
+
+.wallet-illustration-background {
+    width: 100%;
+    height: 100%;
+}
+
+.wallet-illustration-svg {
+    z-index: 1;
+    width: 100px;
+    height: auto;
+    position: absolute;
+    top: 30%;
+    z-index: 1;
+    width: 100px;
+    height: auto;
+}
+
+.wallet-illustration-circles {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    width: 0;
+}
+
+.wallet-illustration-circles.left {
+    left: 0;
+}
+
+.wallet-illustration-circles.right {
+    right: 0;
+}
+
+.circle {
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    opacity: 0.7;
+}
+
+.token-svg {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 2;
+}
+
+.token-svg.bitcoin {
+    width: 66px;
+    height: 66px;
+}
+
+.token-svg.ethereum {
+    width: 66px;
+    height: 66px;
+}
+
+.token-svg.solana {
+    width: 66px;
+    height: 66px;
+}
+
+.connected-text {
+    color: #fff;
+    z-index: 3;
+    font-size: 15px;
+    font-weight: 700;
+    position: absolute;
+    top: 45px;
+    left: 60%;
 }
