--- a/packages/ui/react-ui/styles.css
+++ b/packages/ui/react-ui/styles.css
@@ -256,6 +256,8 @@
     box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.1);
     font-family: 'DM Sans', 'Roboto', 'Helvetica Neue', Helvetica, Arial, sans-serif;
     flex: 1;
+    transition: width 200ms ease, height 200ms ease;
+
 }
 
 .wallet-adapter-modal-wrapper .wallet-adapter-button {
