--- a/packages/ui/react-ui/styles.css
+++ b/packages/ui/react-ui/styles.css
@@ -389,8 +389,29 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 0 24px 24px 24px;
+    padding: 0 12px;
     box-sizing: border-box;
+}
+
+.wallet-adapter-modal-middle h1 {
+    color: #fff;
+    font-size: 18px;
+    font-weight: 700;
+    margin-top: 20px;
+}
+
+.wallet-adapter-modal-middle p {
+    color: gray;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 21px;
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.wallet-adapter-modal-middle svg {
+    width: 130px;
+    height: 130px;
 }
 
 .wallet-adapter-modal-middle-button {
@@ -475,13 +496,21 @@
     padding: 10px;
 }
 
-.wallet-info-navigation-container {
+.wallet-info-navigation-container, 
+.wallet-info-separator-container {
     align-items: center;
     justify-content: center;
     display: flex;
     position: relative;
     width: 100%;
     height: 30px;
+}
+
+.wallet-info-separator-container {
+    margin-bottom: 0;
+}
+
+.wallet-info-navigation-container {
     margin-bottom: 10px;
 }
 
@@ -511,6 +540,7 @@
     background-color: #575757;
     height: 10px;
 }
+
 
 .wallet-info-separator {
     width: 100%;
@@ -549,6 +579,10 @@
 
 .wallet-illustration-background {
     width: 100%;
+    height: 100%;
+}
+.wallet-illustration-new-background {
+    width: 90%;
     height: 100%;
 }
 
