--- a/packages/ui/react-ui/styles.css
+++ b/packages/ui/react-ui/styles.css
@@ -174,6 +174,7 @@
     border: none;
     border-radius: 50%;
     transition: background-color 200ms ease;
+    z-index: 10;
 }
 
 .wallet-adapter-modal-button-close {
